--- a/Add Product Page_style.css
+++ b/Add Product Page_style.css
@@ -3,202 +3,284 @@
     margin: 0px;
     box-sizing: border-box;
     display: inline-block;
+    font-family: "Work Sans", sans-serif;
 }
 
 body {
-    width: 70%;
-    background-color: #eee;
-    margin: 50px 10%;
-    font-family: sans-serif;
+    width: 80%;
+    margin: 0px 10%;
+    background-color: #0001;
+}
+
+.free_div {
+    width: 300px;
+    height: 1000px;
+    float: left;
 }
 
 .container {
-    padding: 20px;
+    height: fit-content;
+    width: 779px;
+    float: right;
 }
 
-.detales {
-    border-bottom: 1px solid gray;
+.header {
+    width: 100%;
+    height: 120px;
+}
+
+.main_title {
+    width: 100%;
+    height: fit-content;
+    margin: 10px;
+
+}
+
+.main_details {
+    color: gray;
+    width: 80%;
+    margin: 10px;
+    padding-left: 5px;
+}
+
+.section {
+    width: 100%;
+    height: fit-content;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    padding-left: 10px;
+    font-size: 20px;
+    border-bottom: 2px solid gray;
 }
 
-.detales,.warning,.warning_2,.pro_detales {
-    font-size: 16px;
+.section a {
+    text-decoration: none;
     color: gray;
 }
 
-.product_name {
-    margin-top: 20px;
-    width: 30%;
-    height: 550px;
-    float: left;
-    padding: 10px;
+.add_product {
+    color: gray;
+    cursor: pointer;
 }
 
+.add_product:hover {
+    color: #344F96;
+    border-bottom: 2px solid #344F96;
+    transition: 0.5s;
+}
 
-.product_imag {
-    height: 550px;
-    width: 70%;
-    margin-top: 20px;
-    float: right;
-    padding: 10px;
+.pro_details, .pro_imag {
+    width: 50%;
+    height: fit-content;
+    float: left;
+    padding: 15px;
+}
+
+.pro_name {
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 15px;
 }
 
 .pro_name_input {
+    width: 100%;
     height: 30px;
-    width: 90%;
-    border: 1px solid blue;
-    border-radius: 4px;
     outline: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    border-radius: 10px;
+    border: none;
+    background-color: #ddd;
+    padding: 5px;
 }
 
-.category,.gender,.brand {
-    margin-top: 10px;
-    margin-bottom: 5px;
-}
-
-.require {
+.name_condition {
+    color: gray;
+    width: 100%;
     height: 20px;
+    margin-top: 10px;
+}
+
+.category, .brand, .desc, .pro_img, .size_box h5, .date_box h5{
+    width: fit-content;
+    font-size: 16px;
+    margin:10px 0px;
+}
+
+.cat_options {
+    width: 100%;
+    border-radius: 10px;
+    border: none;
+    background-color: #ddd;
+    padding: 5px;
+    margin: 10px 0px;
+    outline: none;
+}
+
+.require_sign {
+    background-color: rgb(107, 104, 104);
     width: 20px;
+    height: 20px;
+    color: white;
     text-align: center;
     border-radius: 10px;
     padding-top: 2px;
-    background-color: gray;
-    color: white;
 }
 
-.cat_box {
-    height: fit-content;
-    width: 60%;
-    float: left;
-}
-
-.category_selection,.gender_selection,.brand_selection {
+.brand_options {
+    width: 100%;
     height: 30px;
-    width: 90%;
-    color: blue;
+    border-radius: 10px;
+    border: none;
+    background-color: #ddd;
+    padding: 5px;
+    margin: 10px 0px;
+    outline: none;
+}
+
+.description_condition, .img_condition {
+    color: gray;
+    width: 100%;
+    outline: none;
+    margin: 10px 0px;
+}
+
+.price, .price_sale, .sp {
+    width: 100%;
     font-size: 16px;
-    cursor: pointer;
-}
-
-.gender_box {
-    height: fit-content;
-    width: 40%;
-    float: right;
-}
-
-.desc,.desc_textarea {
     margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 .desc_textarea {
-    width: 100%;
-    border-radius: 4px;
-    font-size: 16px;
+    padding: 5px;
 }
 
-.pro_size_box {
-    width: 48%;
-    float: left;
-    margin-top: 10px;
-}
-
-.size_selection,.pro_date_input {
+.price_input, .price_sale_input, .sp_input {
     width: 100%;
     height: 30px;
+    border-radius: 10px;
+    border: none;
+    background-color: #ddd;
+    padding: 5px;
+}
+
+.pro_details a {
+    text-decoration: none;
+    color: #344F96;
+    margin: 10px 10px;
+    position: relative;
+    left: 250px;
+}
+
+.pro_details a:hover {
+    text-decoration: underline;
+}
+
+.img_box {
+    width: 100%;
+    height: 100px;
+    margin: 10px 0px;
+}
+
+.main_img, .drop_img_1, .img_drop {
+    width: 30%;
+    float: left;
+    margin-left: 10px;
+    height: 100%;
+}
+
+.drop_img_1 {
+    border: 1px dashed gray;
+    border-radius: 4px;
+    font-size: 12px;
+    justify-content: center;
+
+}
+
+.drop_img_1 input, .drop_img_2 input, .drop_img_3 input {
+    width: 100%;
+    height: 20px;
+}
+
+.drop_img_3 {
     margin-top: 10px;
+}
+
+.drop_img_2, .drop_img_3 {
+    border: 1px dashed gray;
+    border-radius: 4px;
+    height: 45%;
+    width: 100%;
+}
+
+.size_box, .date_box {
+    width: 50%;
+    float: left;
+    height: 100px;
+    padding: 10px;
+}
+
+.size_box h5 {
+    width: 100%;
     font-size: 16px;
-    border-radius: 4px;
-    color: blue;
-    cursor: pointer;
 }
 
-.size_options {
-    height: 90px;
+.size_select, .date_input {
     width: 100%;
-    margin-top: 10px;
+    border-radius: 10px;
+    border: none;
+    background-color: #ddd;
+    padding: 5px;
+    margin: 10px 0px;
+    outline: none
 }
 
-.size_option {
+.size_button {
+    width: 70%;
+    height: 100px;
+    float: left;
+}
+
+.size_b {
     width: 25%;
-    height: 30%;
+    float: left;
+    margin: 10px;
+    height: 30px;
     text-align: center;
-    padding-top: 3px;
+    border: 1px solid red;
     cursor: pointer;
-    color: blue;
-    font-size: 20px     ;
-    border: 1px solid gray;
-    border-radius: 5px;
-    margin-top: 10px;
-    margin-left: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 3px 10px #222;
+}
+
+.add_button, .save_button {
     cursor: pointer;
-}
-
-.size_option:hover {
-    background: blue;
-    color: white;
-    transition: 0.6s;
-}
-
-.pro_date_box {
-    width: 48%;
-    float: right;
-    margin-top: 10px;
-}
-
-.pro_img_r {
+    width: 180px;
     float: left;
-    width: 30%;
-    height: 200px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.pro_img {
-    border: 1px dashed gray;
-    border-radius: 4px;
-    float: left;
-    margin-left: 10px;
-    width: 30%;
-    height: 200px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.pro_img_d {
-    width: 35%;
-    height: 100px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    float: right;
-}
-
-.pro_img_drop {
-    width: 100%;
-    height: 100px;
-    border: 1px dashed gray;
-    border-radius: 4px;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 3px 10px #222;
 }
 
 .add_button {
-    width: 50%;
-    height: 40px;
-    color: white;
-    background-color: blue;
-    border: none;
-    border-radius: 4px;
-    position: relative;
-    right: 335px;
-    top: 100px;
-    font-size: 20px;
+    background-color: #98A3FF;
+    color: #000;
+    margin-top: 20px;
 }
 
 .add_button:hover {
-    color: blue;
-    background: white;
-    transition: 0.6s;
-    cursor: pointer;
+    background-color: #2E4566;
+    color: #fff;
+}
+
+.save_button {
+    background-color: #c33;
+    color: #fff;
+    margin-top: 10px;
+}
+
+.save_button:hover {
+    background-color: #2E4566;
 }
